plugins {
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.thirdplace.App'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-simple:2.0.9'
    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
    implementation 'org.glassfish.jersey.core:jersey-server:3.1.5'
    implementation 'org.glassfish.jersey.containers:jersey-container-jetty-http:3.1.5'
    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.5'
    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.5'
    implementation 'org.eclipse.jetty:jetty-server:12.0.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
    implementation 'org.postgresql:postgresql:42.7.1'
    implementation 'com.zaxxer:HikariCP:5.1.0'
    
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'com.h2database:h2:2.2.224'
    testImplementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:3.1.5'
    testImplementation 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-jetty:3.1.5'
}

test {
    useJUnitPlatform()
}